--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@ layout: new_layout
   {% for post in site.posts %}
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="panel panel-default">
-        <div class="row">
-          <div class="col-md-4">
+        <div class="row ">
+          <div class="col-md-4" style="margin-top: 5%;">
             <a href="{{ post.url | prepend: site.baseurl }}">
-              <img src="/img/{{post.image}}" class="img-responsive" height="100">  
+              <img src="/img/{{post.image}}" class="img-responsive image" height="100">  
             </a>
           </div>
           <div class="col-md-8">
             <div class="panel-body">
-              <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+              <h3>
+                <a href="{{ post.url | prepend: site.baseurl }}">
+                  {{ post.title }}
+                </a>
+              </h3>
 
               <p class="text-muted">
                 <i class="fa fa-calendar"></i> {{ post.date | date: "%-d/%m/%Y" }}
