--- a/index.html
+++ b/index.html
@@ -1,38 +1,100 @@
 ---
-layout: new_layout
+permalink: /
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>{{ site.title }}</title>
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+</head>
+<body>
+  <div class="app">
+    <div class="profile">
+      <div class="profile__gradient-circle">
+        <img
+          src="https://avatars3.githubusercontent.com/u/7821031?v=4"
+          alt="{{ site.name }} profile image"
+          class="profile__avatar"
+        >
+      </div>
 
-<div class="row">
-  {% for post in site.posts %}
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <div class="panel panel-default">
-        <div class="row ">
-          <div class="col-md-4" style="margin-top: 5%;">
-            <a href="{{ post.url | prepend: site.baseurl }}">
-              <img src="/img/{{post.image}}" class="img-responsive image" height="100">  
-            </a>
-          </div>
-          <div class="col-md-8">
-            <div class="panel-body">
-              <h3>
-                <a href="{{ post.url | prepend: site.baseurl }}">
-                  {{ post.title }}
-                </a>
-              </h3>
+      <h1 class="profile__name">{{ site.name }}</h1>
 
-              <p class="text-muted">
-                <i class="fa fa-calendar"></i> {{ post.date | date: "%-d/%m/%Y" }}
-              </p>
-              
-              <p><em>{{post.excerpt}}</em></p>
+      <p class="profile__description">
+        {{ site.description }}
+      </p>
 
-              <a href="{{ post.url | prepend: site.baseurl }}" class="btn btn-primary btn-lg pull-right col-md-4">
-                <i class="fa fa-plus fa-lg"></i> Leia Mais
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>  
+      <span class="email">
+        <img src="/assets/images/mail.svg" class="email__icon" alt="email me icon" />
+        <a href="mailto:{{ site.email }}" class="email__link">{{ site.email }}</a>
+      </span>
+
+      <div class="social-media">
+        <a
+          href="//facebook.com/{{ site.facebook_username }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-media__link"
+        >
+          <img src="/assets/images/facebook.svg" class="social-media__icon" alt="facebook icon" />
+        </a>
+        <a
+          href="//github.com/{{ site.github_username }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-media__link"
+        >
+          <img src="/assets/images/github.svg" class="social-media__icon" alt="github icon" />
+        </a>
+        <a
+          href="//instagram.com/{{ site.instagram_username }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-media__link"
+        >
+          <img src="/assets/images/instagram.svg" class="social-media__icon" alt="instagram icon" />
+        </a>
+        <a
+          href="//linkedin.com/in/{{ site.linkedin_username }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-media__link"
+        >
+          <img src="/assets/images/linkedin.svg" class="social-media__icon" alt="linkedin icon" />
+        </a>
+        <a
+          href="//twitter.com/{{ site.twitter_username }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-media__link"
+        >
+          <img src="/assets/images/twitter.svg" class="social-media__icon" alt="twitter icon" />
+        </a>
+      </div>
+
+      <a
+        href="https://docs.google.com/document/d/1hEMCGXnCpBwDHi2ZeiyWFHiCd9eKm7nkOpoBeCLR94E/export?format=pdf"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="resume"
+      >
+        <!-- <img src="/assets/images/download.svg" class="resume__icon" alt="download resumé icon" /> -->
+        <span>Download my CV</span>
+      </a>
+
+
     </div>
-  {% endfor %}
-</div>
+
+    <div class="content"></div>
+  </div>
+
+  <footer class="footer">
+    <p class="footer__passion">❤️&nbsp; I am passionate about traveling. &nbsp;🛫</p>
+    <small>Icons made by <a href="https://www.flaticon.com/authors/pixel-buddha" title="Pixel Buddha">Pixel Buddha</a> and <a href="https://www.flaticon.com/authors/iconnice" title="Iconnice">Iconnice</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small>
+  </footer>
+</body>
+</html>
