--- a/index.html
+++ b/index.html
@@ -1,100 +1,4 @@
 ---
+layout: home
 permalink: /
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ site.title }}</title>
-  <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
-<body>
-  <div class="app">
-    <div class="profile">
-      <div class="profile__gradient-circle">
-        <img
-          src="https://avatars3.githubusercontent.com/u/7821031?v=4"
-          alt="{{ site.name }} profile image"
-          class="profile__avatar"
-        >
-      </div>
-
-      <h1 class="profile__name">{{ site.name }}</h1>
-
-      <p class="profile__description">
-        {{ site.description }}
-      </p>
-
-      <span class="email">
-        <img src="/assets/images/mail.svg" class="email__icon" alt="email me icon" />
-        <a href="mailto:{{ site.email }}" class="email__link">{{ site.email }}</a>
-      </span>
-
-      <div class="social-media">
-        <a
-          href="//facebook.com/{{ site.facebook_username }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-media__link"
-        >
-          <img src="/assets/images/facebook.svg" class="social-media__icon" alt="facebook icon" />
-        </a>
-        <a
-          href="//github.com/{{ site.github_username }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-media__link"
-        >
-          <img src="/assets/images/github.svg" class="social-media__icon" alt="github icon" />
-        </a>
-        <a
-          href="//instagram.com/{{ site.instagram_username }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-media__link"
-        >
-          <img src="/assets/images/instagram.svg" class="social-media__icon" alt="instagram icon" />
-        </a>
-        <a
-          href="//linkedin.com/in/{{ site.linkedin_username }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-media__link"
-        >
-          <img src="/assets/images/linkedin.svg" class="social-media__icon" alt="linkedin icon" />
-        </a>
-        <a
-          href="//twitter.com/{{ site.twitter_username }}"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-media__link"
-        >
-          <img src="/assets/images/twitter.svg" class="social-media__icon" alt="twitter icon" />
-        </a>
-      </div>
-
-      <a
-        href="https://docs.google.com/document/d/1hEMCGXnCpBwDHi2ZeiyWFHiCd9eKm7nkOpoBeCLR94E/export?format=pdf"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="resume"
-      >
-        <!-- <img src="/assets/images/download.svg" class="resume__icon" alt="download resumé icon" /> -->
-        <span>Download my CV</span>
-      </a>
-
-
-    </div>
-
-    <div class="content"></div>
-  </div>
-
-  <footer class="footer">
-    <p class="footer__passion">❤️&nbsp; I am passionate about traveling. &nbsp;🛫</p>
-    <small class="footer__credits">Icons made by <a href="https://www.flaticon.com/authors/pixel-buddha" title="Pixel Buddha">Pixel Buddha</a> and <a href="https://www.flaticon.com/authors/iconnice" title="Iconnice">Iconnice</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></small>
-  </footer>
-</body>
-</html>
